<package format="2">
  <name>simple_vicon</name>
  <version>0.0.0</version>
  <description>simple_vicon</description>
  <author email="spitzer@cmu.edu">Alex Spitzer</author>
  <maintainer email="spitzer@cmu.edu">Alex Spitzer</maintainer>
  <license>N/A</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
</package>
